--- a/main.css
+++ b/main.css
@@ -53,9 +53,6 @@ body {
   background: var(--background-gradient, linear-gradient(222deg, #F2F2F2 13.91%, #BEC9CA 98.79%));
 }
 
-h1 {
-  font-size: var(--text-xxl);
-}
 
 a,
 a:visited,
@@ -94,6 +91,12 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 48px;
+}
+
+header h1 {
+  font-size: var(--text-xxl);
+  font-weight: var(--text-bold);
+  color: var(--content-primary);
 }
 
 header .header-links {
@@ -163,25 +166,11 @@ a.project-thumb:hover {
 }
 
 
-a.header-back-link {
-  display: flex;
-  gap: 8px;
-  align-items: center;
-  text-decoration: none;
-  /* Add transition property */
-  transition: color 0.222s ease;
-  color: var(--content-primary);
-}
-
-a:hover.header-back-link {
-  color: var(--content-link);
-}
-
 
 .project-details {
-  display: flex;
-  flex-direction: column;
-  gap: 0;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 32px;
 }
 
 .project-details img {
@@ -207,6 +196,12 @@ a:hover.header-back-link {
   .project-grid {
     grid-template-columns: 1fr;
   }
+
+  /* .project-details img {
+    width: 50%;
+    margin-bottom: 32px;
+    border-radius: 12px;
+  } */
 
   /* h1 {
     font-size: var(--text-xl);
